# gst-ffmpeg

./: Android.mk  autogen.sh  configure.ac
ext/ffmpeg/: Android.mk  Makefile.am  gstffmpeg.c  gstffmpegcodecmap.c  gstffmpegdec.c  gstffmpegdemux.c  gstffmpegenc.c  gstffmpegscale.c
gst-libs/ext/: ffmpeg
